<resources>
    <string name="app_name">Family Shopping</string>
    <string name="no_internet">Nessuna connesione ad internet</string>
    <string name="image_content_descriptor">image</string>
    <string name="transition_home">list_item</string>

    <!-- Stringhe delle SharedPreferences -->
    <string name="user_logged">user_logged</string>

    <!-- Stringhe per la IntroActivity -->
    <string name="intro_title1">@string/app_name</string>
    <string name="intro_descr1">Con FamilyShopping puoi organizzare la tua lista della spesa e condividerla
        con gli altri membri della famiglia così che tutti possano essere sempre aggiornati.
        Puoi aggiungere elemeti alla lista, dare loro una priorità cosi da metterli in evidenza
        e poi una volta comprati puoi eliminarli dalla lista.</string>

    <!-- Stringhe per il login/register -->
    <string name="login_title">Iniziamo&#8230;</string>
    <string name="login_subtitle">Inserisci la email ed una password per iniziare la registrazione.
        Già registrato? Nessun problema, inserisci le tue credenziali</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_nome">Nome</string>
    <string name="error_invalid_email">La email non è valida</string>
    <string name="error_invalid_password">La password deve avere almeno 6 caratteri</string>
    <string name="error_invalid_name">Il nome deve almeno avere 3 caratteri</string>
    <string name="action_login">Login</string>
    <string name="action_login_fetching">Verificando i dati&#8230;</string>
    <string name="action_login_done">Fatto</string>
    <string name="error_login">Ops, qualcosa non ha funzionato</string>

    <!-- Stringhe per il fragment finale dell'IntroActivity -->
    <string name="intro_title2_old">Bentornato</string>
    <string name="intro_title2_new">Benvenuto</string>
    <string name="intro_subtitle2_old">Controlla che il codice identificativo della famiglia sia corretto</string>
    <string name="intro_subtitle2_new">Inserisci il codice identificativo della tua famiglia, lo trovi nell\'app sul telefono di un tuo famigliare.
    Se invece sei il primo che installa l\'app lascia pure vuoto, ne inventerò uno io.</string>
    <string name="prompt_familycode">Codice famiglia</string>
    <string name="error_invalid_familycode">Codice errato</string>
    <string name="action_save">Salva</string>
    <string name="action_save_fetching">Salvando&#8230;</string>
    <string name="action_save_done">Salvato</string>

    <!-- Stringhe per Bottom Navigation Bar -->
    <string name="bn_item1">Spesa</string>
    <string name="bn_item2">Ricette</string>
    <string name="bn_item3">Profilo</string>

    <!-- Stringhe per i menu -->
    <string name="menu_home">Ordina per</string>
    <string name="menu_view_mode">Vista</string>

    <!-- Stringhe per il bottom stylesheet orderby -->
    <string name="bottom_title">Ordina per</string>
    <string name="bottom_choice_last">Ultimi modificati</string>
    <string name="bottom_choice_priority">Priorità</string>

    <!-- Stringhe per il bottom stylesheet view mode -->
    <string name="bottom_title_viewmode">Visualizza come</string>
    <string name="bottom_choice_list">Lista</string>
    <string name="bottom_choice_grid">Griglia</string>

    <!-- Stringhe per il Fragment della lista della spesa -->
    <string name="tv_item_list_details">&lt;b>%1$s&lt;/b> · %2$s</string>
    <string name="tv_item_list_author_me">Io</string>
    <string name="tv_item_time_few_ago">poco fa</string>
    <string name="tv_item_time_today">oggi</string>
    <string name="tv_item_time_yesterday">ieri</string>
    <string name="tv_item_time_days">%d giorni fa</string>
    <plurals name="tv_item_time_weeks">
        <item quantity="one">%d settimana fa</item>
        <item quantity="other">%d settimane fa</item>
    </plurals>
    <string name="prompt_item_deleted">Articolo eliminato</string>
    <string name="title_activity_show_lista_item_details">ShowListaItemDetails</string>
    <string name="cancel_deleting">Annulla</string>

    <!-- Stringhe per ShowListaItemDetails activity -->
    <string name="username_null">Utente</string>
    <string name="comment_null">Nessun commento</string>
    <string name="item_priorita">Priorità</string>
    <string name="item_priorita_value_alta">Alta</string>
    <string name="item_priorita_value_media">Media</string>
    <string name="item_priorita_value_bassa">Bassa</string>
    <string name="item_added">Aggiunto</string>
    <string name="item_category">Categoria</string>

    <!-- AddItemList strings -->
    <string name="save_item">SALVA</string>
    <string name="close_suggestion">FINE</string>
    <string name="item_label">Articolo</string>
    <string name="item_add_comment">Aggiungi un commento</string>
    <string name="recents_label">Recenti</string>
    <string name="error_no_item_name">Nessun articolo inserito</string>
    <string name="error_no_item_category">Nessuna categoria selezionata</string>


    <!-- ProfiloUtente fragment-->
    <string name="tv_info_label">Info utente</string>
    <string name="tv_familyinfo_label">Famiglia</string>
    <string name="tv_members_label">Membri</string>
    <string name="tv_other_label">Altro</string>
    <string name="tv_other_info_label">Informazioni</string>
    <string name="tv_exit_from_app">Esci</string>
    <string name="tv_pssw_placeholder">Cambia password</string>
    <string name="tv_family_name">Nome</string>
    <string name="tv_family_code">Codice di accesso</string>
    <string name="tv_family_number">Numero membri</string>
    <string name="dialogo_change_pssw_title">Cambio password</string>
    <string name="dialog_change_fam">Modifica</string>
    <string name="et_change_pssw1">Vecchia password</string>
    <string name="et_change_pssw2">Nuova password</string>
    <string name="et_nome_fam">Nome famiglia</string>
    <string name="change_pssw_error">Dati immessi non validi</string>
    <string name="change_pssw_done">Password cambiata</string>
    <string name="change_pssw_failed">Errore, password non cambiata</string>
    <string name="change_nome_fam_done">Nome famiglia cambiato</string>
    <string name="change_nome_fam_fail">Errore, nessuna modifica apportata</string>
    <string name="dialog_exit_title">Conferma</string>
    <string name="dialog_exit_content">Vuoi veramente uscire dall\'applicazione?</string>


    <!-- INFO Activity -->
    <string name="info_act_title">Informazioni</string>
    <string name="tv_autore_label">Autore</string>
    <string name="tv_autore_nome">Nicola Pagiaro</string>
    <string name="tv_autore_mail">pagiaro@gmail.com</string>
    <string name="tv_autore_site">www.sitoancoradafare.com</string>
    <string name="tv_info_app_label">Librerie usate</string>
</resources>
