<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/intro_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_loginfinal_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:gravity="center_horizontal"
        android:text="@string/intro_title2_new"
        android:textColor="@color/primaryTextColorWhite"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_loginfinal_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:gravity="center_horizontal"
        android:text="@string/intro_subtitle2_new"
        android:textColor="@color/secondaryTextColorWhite"
        android:textSize="16sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/wrapper_familycode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:textColorHint="@color/white">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_familycode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_familycode"
            android:maxLength="5"
            android:inputType="numberDecimal"
            android:textColor="@color/white" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_save"
        style="@style/ButtonIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/action_save" />

</LinearLayout>