<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_bottom_sheet_priority_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/item_priorita"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/bottom_textsize" />

    <RelativeLayout
        android:id="@+id/bottom_priority_high"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_height"
        android:layout_marginTop="@dimen/list_margin_top"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_bottom_choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:text="@string/item_priorita_value_alta"
            android:textColor="@color/primaryTextColor" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_priority_med"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_height"
        android:layout_marginBottom="@dimen/list_margin_top"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_bottom_choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:text="@string/item_priorita_value_media"
            android:textColor="@color/primaryTextColor" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_priority_low"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_height"
        android:layout_marginBottom="@dimen/list_margin_top"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_bottom_choice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:text="@string/item_priorita_value_bassa"
            android:textColor="@color/primaryTextColor" />

    </RelativeLayout>
</LinearLayout>