<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/utente_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/list_margin_top"
            android:text="@string/tv_info_label"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/twolines_secondText"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/card_margin_horizontal"
            android:layout_marginRight="@dimen/card_margin_horizontal"
            android:layout_marginTop="@dimen/list_margin_top"
            card_view:cardCornerRadius="0dp"
            card_view:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/list_margin_top">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/list_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="@dimen/bottom_icon_size"
                        android:layout_height="@dimen/bottom_icon_size"
                        android:layout_marginStart="@dimen/horizontal_margin"
                        app:srcCompat="@drawable/ic_person_grey_24dp" />

                    <TextView
                        android:id="@+id/tv_utente_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/horizontal_margin"
                        android:layout_marginStart="@dimen/twolist_marginStart"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/twolines_firstText" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/list_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="@dimen/bottom_icon_size"
                        android:layout_height="@dimen/bottom_icon_size"
                        android:layout_marginStart="@dimen/horizontal_margin"
                        app:srcCompat="@drawable/ic_email_grey_24dp" />

                    <TextView
                        android:id="@+id/tv_utente_mail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/horizontal_margin"
                        android:layout_marginStart="@dimen/twolist_marginStart"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/twolines_firstText" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/change_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/list_height"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="@dimen/bottom_icon_size"
                        android:layout_height="@dimen/bottom_icon_size"
                        android:layout_marginStart="@dimen/horizontal_margin"
                        app:srcCompat="@drawable/ic_key_grey_24dp" />

                    <TextView
                        android:id="@+id/tv_utente_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/horizontal_margin"
                        android:layout_marginStart="@dimen/twolist_marginStart"
                        android:text="@string/tv_pssw_placeholder"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/twolines_firstText" />

                </LinearLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/tv_familyinfo_label"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/twolines_secondText"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/card_margin_horizontal"
            android:layout_marginRight="@dimen/card_margin_horizontal"
            android:layout_marginTop="@dimen/list_margin_top"
            card_view:cardCornerRadius="0dp"
            card_view:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/nome_fam_container"
                    android:layout_width="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_height="@dimen/twolist_height"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_family_nome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/horizontal_margin"
                        android:layout_marginStart="@dimen/horizontal_margin"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/twolines_firstText" />

                    <TextView
                        android:id="@+id/tv_family_name_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/horizontal_margin"
                        android:layout_marginStart="@dimen/horizontal_margin"
                        android:text="@string/tv_family_name"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="@dimen/twolines_secondText" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/twolist_height"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_family_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/horizontal_margin"
                        android:layout_marginStart="@dimen/horizontal_margin"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/twolines_firstText" />

                    <TextView
                        android:id="@+id/tv_family_code_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/horizontal_margin"
                        android:layout_marginStart="@dimen/horizontal_margin"
                        android:text="@string/tv_family_code"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="@dimen/twolines_secondText" />

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/tv_members_label"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/twolines_secondText"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/card_margin_horizontal"
            android:layout_marginRight="@dimen/card_margin_horizontal"
            android:layout_marginTop="@dimen/list_margin_top"
            card_view:cardCornerRadius="0dp"
            card_view:cardElevation="4dp">

            <LinearLayout
                android:id="@+id/ll_members"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/tv_other_label"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/twolines_secondText"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginLeft="@dimen/card_margin_horizontal"
            android:layout_marginRight="@dimen/card_margin_horizontal"
            android:layout_marginTop="@dimen/list_margin_top"
            card_view:cardCornerRadius="0dp"
            card_view:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/info_container"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/list_height"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="@dimen/bottom_icon_size"
                        android:layout_height="@dimen/bottom_icon_size"
                        android:layout_marginStart="@dimen/horizontal_margin"
                        app:srcCompat="@drawable/ic_info_outline_grey_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/horizontal_margin"
                        android:layout_marginStart="@dimen/twolist_marginStart"
                        android:text="@string/tv_other_info_label"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/twolines_firstText" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/list_height"
                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/logout_container"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="@dimen/bottom_icon_size"
                        android:layout_height="@dimen/bottom_icon_size"
                        android:layout_marginStart="@dimen/horizontal_margin"
                        app:srcCompat="@drawable/ic_exit_to_app_red_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/horizontal_margin"
                        android:layout_marginStart="@dimen/twolist_marginStart"
                        android:textColor="@color/red"
                        android:text="@string/tv_exit_from_app"
                        android:textSize="@dimen/twolines_firstText" />

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>